[gd_scene load_steps=2 format=3 uid="uid://defeat_screen"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, <applaa-write path="godot-project/scenes/DefeatScreen.tscn" description="Defeat screen scene">
[gd_scene load_steps=2 format=3 uid="uid://defeat_screen"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.95, 0.95, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="DefeatTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Game Over"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Don't give up! Keep trying!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TotalStarsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Stars Earned: 0 ‚≠ê"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Close Game"